--- a/experience.html
+++ b/experience.html
@@ -7,83 +7,81 @@
 <style>
   body {
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #121212;
     color: #fff;
-    overflow-x: hidden;
+    font-family: 'Arial', sans-serif;
   }
-
   h1 {
     text-align: center;
     color: #00bcd4;
-    margin-top: 20px;
+    margin: 20px 0;
   }
-
   .timeline-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
-    padding: 40px 20px;
-    gap: 80px 40px;
+    align-items: center;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 40px 0;
+    width: 100%;
   }
-
-  .timeline-experience {
-    position: relative;
+  .timeline-row {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 100%;
+    margin: 20px 0;
+  }
+  .timeline-point {
     display: flex;
     flex-direction: column;
     align-items: center;
-    cursor: pointer;
-    z-index: 2;
-    width: 120px;
-  }
-
-  .experience-bar {
-    position: absolute;
-    bottom: 30px; /* behind logo and year */
-    left: 0;
-    height: 6px;
-    width: 0;
-    background: #00bcd4;
-    border-radius: 3px;
-    z-index: 0;
-    animation: expandBar 1s forwards;
-  }
-
-  @keyframes expandBar {
-    from { width: 0; }
-    to { width: 100%; }
-  }
-
-  .timeline-experience img {
     position: relative;
-    z-index: 1;
+    cursor: pointer;
+    transition: transform 0.2s;
+    margin: 0 10px;
+  }
+  .timeline-point img {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    margin-bottom: 5px;
-    border: 2px solid #00bcd4;
-    background-color: #222;
-    object-fit: contain;
-    padding: 5px;
-    transition: transform 0.3s;
+    transition: transform 0.2s;
   }
-
-  .timeline-experience:hover img {
-    transform: scale(1.1);
-  }
-
   .timeline-year {
-    font-size: 0.8rem;
+    font-size: 12px;
+    color: #aaa;
     margin-top: 5px;
+    transition: font-size 0.2s ease, color 0.2s ease;
+  }
+  .timeline-title {
+    font-size: 14px;
+    color: #fff;
     text-align: center;
+    margin-top: 3px;
+    transition: font-size 0.2s ease, color 0.2s ease;
+  }
+  .timeline-point:hover .timeline-year,
+  .timeline-point:hover .timeline-title {
+    font-size: 16px;
+    color: #00bcd4;
+  }
+  .timeline-bar {
+    position: absolute;
+    top: 30px;
+    left: 50%;
+    height: 4px;
+    background: #444;
+    z-index: -1;
+    transition: width 1s ease;
   }
 
-  /* Modal */
+  /* Modal styling */
   .modal {
-    display: none;
-    position: fixed;
-    z-index: 999;
+    display: none; 
+    position: fixed; 
+    z-index: 100; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
     width: 100%;
@@ -91,86 +89,53 @@
     overflow: auto;
     background-color: rgba(0,0,0,0.85);
   }
-
   .modal-content {
     background-color: #1e1e1e;
-    margin: 60px auto;
+    margin: auto;
     padding: 20px;
-    border-radius: 8px;
-    width: 80%;
+    border: 1px solid #888;
+    width: 70%;
     max-width: 900px;
-    animation: slideIn 0.5s ease-out;
-    position: relative;
+    border-radius: 10px;
     color: #fff;
+    position: relative;
   }
-
-  @keyframes slideIn {
-    from { transform: translateY(-50px); opacity: 0; }
-    to { transform: translateY(0); opacity: 1; }
-  }
-
   .modal-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #111;
+    background-color: #222;
     padding: 10px 20px;
-    border-radius: 6px 6px 0 0;
-    margin: -20px -20px 10px -20px;
+    border-radius: 8px 8px 0 0;
   }
-
   .modal-header h2 {
-    color: #00bcd4;
     margin: 0;
-    font-size: 1.5rem;
+    color: #00bcd4;
   }
-
   .close {
-    color: #ccc;
+    color: #aaa;
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
   }
-
+  .close:hover {
+    color: #fff;
+  }
   .modal-body {
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    gap: 20px;
+  }
+  .modal-body .modal-text {
+    width: 70%;
+    white-space: normal;
+    line-height: 1.5;
+  }
+  .modal-body .modal-logo img {
+    max-width: 120px;
+    max-height: 120px;
   }
 
-  .modal-info {
-    flex: 1;
-  }
-
-  .modal-info p {
-    margin: 5px 0;
-  }
-
-  .modal-logo {
-    flex-shrink: 0;
-    align-self: flex-start;
-  }
-
-  .modal-logo img {
-    max-width: 150px;
-    height: auto;
-  }
-
-  @media screen and (max-width: 768px) {
-    .timeline-container {
-      gap: 60px 20px;
-    }
-    .timeline-experience {
-      width: 100px;
-    }
-    .modal-body {
-      flex-direction: column;
-    }
-    .modal-logo {
-      align-self: center;
-    }
-  }
 </style>
 </head>
 <body>
@@ -178,64 +143,65 @@
 <h1>Professional Experience Timeline (2005–2025)</h1>
 
 <div class="timeline-container">
-  <!-- Vivanka -->
-  <div class="timeline-experience" onclick="openModal('modal-vivanka')">
-    <div class="experience-bar"></div>
-    <img src="images/vivanka-logo.png" alt="Vivanka Inc.">
-    <div class="timeline-year">Apr 2024 – Present</div>
+
+  <!-- First Row -->
+  <div class="timeline-row">
+    <div class="timeline-point" onclick="openModal('vivanka')">
+      <img src="images/vivanka-logo.png" alt="Vivanka Inc. Logo">
+      <div class="timeline-year">Apr. 2024 – Present</div>
+      <div class="timeline-title">Founder & Principal Consultant</div>
+      <div class="timeline-bar" style="width:100px;"></div>
+    </div>
+    <div class="timeline-point" onclick="openModal('dell')">
+      <img src="images/dell-logo.png" alt="Dell Technologies Logo">
+      <div class="timeline-year">Oct. 2018 – Apr. 2024</div>
+      <div class="timeline-title">Consultant Solutions Architect</div>
+      <div class="timeline-bar" style="width:90px;"></div>
+    </div>
+    <div class="timeline-point" onclick="openModal('emcME')">
+      <img src="images/emc-logo.png" alt="Dell EMC Middle East Logo">
+      <div class="timeline-year">Jul. 2013 – Oct. 2018</div>
+      <div class="timeline-title">Senior Advisor / Solutions Architect</div>
+      <div class="timeline-bar" style="width:80px;"></div>
+    </div>
   </div>
 
-  <!-- Dell Technologies -->
-  <div class="timeline-experience" onclick="openModal('modal-dell')">
-    <div class="experience-bar"></div>
-    <img src="images/dell-logo.png" alt="Dell Technologies">
-    <div class="timeline-year">Oct 2018 – Apr 2024</div>
+  <!-- Second Row -->
+  <div class="timeline-row">
+    <div class="timeline-point" onclick="openModal('emcSeniorImpl')">
+      <img src="images/emc-logo.png" alt="EMC Senior Implementation Logo">
+      <div class="timeline-year">Oct. 2010 – Jul. 2013</div>
+      <div class="timeline-title">Senior Implementation Delivery Specialist</div>
+      <div class="timeline-bar" style="width:70px;"></div>
+    </div>
+    <div class="timeline-point" onclick="openModal('emcIndia')">
+      <img src="images/emc-logo.png" alt="EMC India Logo">
+      <div class="timeline-year">Oct. 2007 – Oct. 2010</div>
+      <div class="timeline-title">Implementation Delivery Specialist</div>
+      <div class="timeline-bar" style="width:60px;"></div>
+    </div>
+    <div class="timeline-point" onclick="openModal('emcThailand')">
+      <img src="images/emc-logo.png" alt="EMC Thailand Logo">
+      <div class="timeline-year">Sep. 2006 – Oct. 2007</div>
+      <div class="timeline-title">Technical Consultant / Implementation Specialist</div>
+      <div class="timeline-bar" style="width:50px;"></div>
+    </div>
   </div>
 
-  <!-- Dell EMC Middle East -->
-  <div class="timeline-experience" onclick="openModal('modal-emc-middle-east')">
-    <div class="experience-bar"></div>
-    <img src="images/emc-logo.png" alt="Dell EMC Middle East">
-    <div class="timeline-year">Jul 2013 – Oct 2018</div>
-  </div>
-
-  <!-- EMC Senior Implementation -->
-  <div class="timeline-experience" onclick="openModal('modal-emc-senior-impl')">
-    <div class="experience-bar"></div>
-    <img src="images/emc-logo.png" alt="Senior Implementation Delivery Specialist">
-    <div class="timeline-year">Oct 2010 – Jul 2013</div>
-  </div>
-
-  <!-- EMC India -->
-  <div class="timeline-experience" onclick="openModal('modal-emc-india')">
-    <div class="experience-bar"></div>
-    <img src="images/emc-logo.png" alt="EMC India">
-    <div class="timeline-year">Oct 2007 – Oct 2010</div>
-  </div>
-
-  <!-- EMC Thailand -->
-  <div class="timeline-experience" onclick="openModal('modal-emc-thailand')">
-    <div class="experience-bar"></div>
-    <img src="images/emc-logo.png" alt="EMC Thailand">
-    <div class="timeline-year">Sept 2006 – Oct 2007</div>
-  </div>
 </div>
 
 <!-- Modals -->
-
-<!-- Vivanka Modal -->
-<div id="modal-vivanka" class="modal">
+<div id="vivanka" class="modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Founder & Principal Consultant</h2>
-      <span class="close" onclick="closeModal('modal-vivanka')">&times;</span>
+      <span class="close" onclick="closeModal('vivanka')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
+      <div class="modal-text">
         <p><strong>Vivanka Inc., Toronto, Canada</strong></p>
-        <p>Apr 2024 – Present</p>
+        <p>Apr. 2024 – Present</p>
         <p>Provided consulting services to Canadian enterprises on modernizing backup and cyber recovery strategies. Delivered end-to-end architecture, migration, and implementation services while engaging with stakeholders to ensure business alignment.</p>
-        <p><strong>Key Engagements:</strong></p>
         <ul>
           <li>Led a 6 month engagement to migrate legacy NetWorker environment to latest version, modernizing backup infrastructure & improving recovery SLAs.</li>
           <li>Designed and deployed PowerProtect Data Manager (PPDM) with Data Domain and cloud tier across primary and secondary sites, enabling cost optimized long-term retention.</li>
@@ -244,25 +210,23 @@
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/vivanka-logo.png" alt="Vivanka Inc.">
+        <img src="images/vivanka-logo.png" alt="Vivanka Logo">
       </div>
     </div>
   </div>
 </div>
 
-<!-- Dell Technologies Modal -->
-<div id="modal-dell" class="modal">
+<div id="dell" class="modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Consultant Solutions Architect</h2>
-      <span class="close" onclick="closeModal('modal-dell')">&times;</span>
+      <span class="close" onclick="closeModal('dell')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
-        <p><strong>Dell Technologies, , Toronto, Canada</strong>strong></p>
-        <p>Oct 2018 – Apr 2024</p>
+      <div class="modal-text">
+        <p><strong>Dell Technologies, Toronto, Ontario, Canada</strong></p>
+        <p>Oct. 2018 – Apr. 2024</p>
         <p>As a Consultant Solutions Architect for Data Protection Systems (DPS) at Dell Technologies, I specialized in engaging with clients to understand their business challenges and craft customized data protection solutions. I provided deep technical expertise in Dell's backup and recovery products, including NetWorker, Data Domain, Avamar, PowerProtect Data Manager, and Cyber Recovery, with a focus on integrating enterprise hybrid cloud environments and ensuring compliance with security and governance frameworks.</p>
-        <p><strong>Key Contributions:</strong></p>
         <ul>
           <li>Served as a trusted technical advisor, guiding clients through data protection strategies and cyber recovery implementations to enhance resilience against cyber threats.</li>
           <li>Led pre-sales engagements by demonstrating product capabilities, tailoring solutions to client needs, and advising on security best practices, improving customer adoption rates.</li>
@@ -277,25 +241,23 @@
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/dell-logo.png" alt="Dell Technologies">
+        <img src="images/dell-logo.png" alt="Dell Logo">
       </div>
     </div>
   </div>
 </div>
 
-<!-- Dell EMC Middle East Modal -->
-<div id="modal-emc-middle-east" class="modal">
+<div id="emcME" class="modal">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Senior Advisor / Senior Solutions Architect - Dell EMC Middle East</h2>
-      <span class="close" onclick="closeModal('modal-emc-middle-east')">&times;</span>
+      <h2>Senior Advisor / Senior Solutions Architect</h2>
+      <span class="close" onclick="closeModal('emcME')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
+      <div class="modal-text">
         <p><strong>Dell EMC Middle East, Dubai, United Arab Emirates</strong></p>
-        <p>Jul 2013 – Oct 2018</p>
+        <p>Jul. 2013 – Oct. 2018</p>
         <p>As a Senior Advisor Solutions Architect for Data Protection Systems (DPS) at Dell EMC in the GCC region, I closely collaborated with clients to deliver tailored data protection solutions. My expertise covered EMC’s backup and recovery products, such as NetWorker, Data Domain, Avamar, Data Protection Advisor, Cristie BMR solutions, IDPA, and integration with Enterprise Hybrid Cloud. I also integrated third-party solutions, such as Commvault, Veeam, and IBM Spectrum Protect, while driving AI-focused initiatives to enhance automation, predictive analytics, and threat detection in data protection strategies.</p>
-        <p><strong>Key Contributions:</strong></p>
         <ul>
           <li>Delivered bespoke solutions for global accounts, optimizing data protection strategies and driving significant business value through tailored implementations.</li>
           <li>Initiated and led AI-focused training programs, promoting the integration of AI technologies into the design and implementation of data protection solutions, enhancing operational efficiency, security, and proactive risk management.</li>
@@ -312,25 +274,25 @@
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/emc-logo.png" alt="Dell EMC Middle East">
+        <img src="images/emc-logo.png" alt="EMC Logo">
       </div>
     </div>
   </div>
 </div>
 
-<!-- Senior Implementation Delivery Specialist - EMC Middle East -->
-<div id="modal-emc-senior-impl" class="modal">
+<!-- Additional modals for Senior Implementation Delivery, EMC India, and EMC Thailand would follow the same pattern -->
+<!-- EMC Senior Implementation Delivery Modal -->
+<div id="emcSeniorImpl" class="modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Senior Implementation Delivery Specialist</h2>
-      <span class="close" onclick="closeModal('modal-emc-senior-impl')">&times;</span>
+      <span class="close" onclick="closeModal('emcSeniorImpl')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
+      <div class="modal-text">
         <p><strong>EMC Middle East, Dubai, United Arab Emirates</strong></p>
-        <p>Oct 2010 – Jul 2013</p>
+        <p>Oct. 2010 – Jul. 2013</p>
         <p>As a Senior Implementation Delivery Specialist for Backup & Recovery Systems (BRS) at EMC, I provided implementation services for data protection solutions in the GCC region. My responsibilities included performing complex software implementations, managing delivery of services, and ensuring high customer satisfaction.</p>
-        <p><strong>Key Contributions:</strong></p>
         <ul>
           <li>Delivered implementation services for backup and recovery solutions to customers in the GCC region, ensuring adherence to specifications and design documents.</li>
           <li>Managed implementation delivery of services to achieve high customer satisfaction.</li>
@@ -339,50 +301,47 @@
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/emc-logo.png" alt="EMC Middle East">
+        <img src="images/emc-logo.png" alt="EMC Logo">
       </div>
     </div>
   </div>
 </div>
-
-<!-- Implementation Delivery Specialist - EMC India -->
-<div id="modal-emc-india" class="modal">
+<!-- EMC India Modal -->
+<div id="emcIndia" class="modal">
   <div class="modal-content">
     <div class="modal-header">
       <h2>Implementation Delivery Specialist</h2>
-      <span class="close" onclick="closeModal('modal-emc-india')">&times;</span>
+      <span class="close" onclick="closeModal('emcIndia')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
+      <div class="modal-text">
         <p><strong>EMC Data Storage India Pvt. Ltd., New Delhi, India</strong></p>
-        <p>Oct 2007 – Oct 2010</p>
+        <p>Oct. 2007 - Oct. 2010</p>
         <p>As an Implementation Delivery Specialist for Backup & Recovery Systems (BRS) at EMC, I deployed backup and recovery solutions for customers in South Asia.</p>
-        <p><strong>Key Contributions:</strong></p>
         <ul>
           <li>Provided delivery services for backup and recovery solutions to customers in the South Asia region.</li>
           <li>Implemented a combination of EMC products including NetWorker, Data Domain, Avamar, Data Protection Advisor, Homebase (BMR) solutions, EMC EmailXtender (SourceOne), and EMC DiskExtender.</li>
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/emc-logo.png" alt="EMC India">
+        <img src="images/emc-logo.png" alt="EMC Logo">
       </div>
     </div>
   </div>
 </div>
 
-<!-- Technical Consultant / Implementation Specialist - EMC Thailand -->
-<div id="modal-emc-thailand" class="modal">
+<!-- EMC Thailand Modal -->
+<div id="emcThailand" class="modal">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Technical Consultant / Implementation Specialist - EMC Thailand</h2>
-      <span class="close" onclick="closeModal('modal-emc-thailand')">&times;</span>
+      <h2>Technical Consultant / Implementation Specialist</h2>
+      <span class="close" onclick="closeModal('emcThailand')">&times;</span>
     </div>
     <div class="modal-body">
-      <div class="modal-info">
+      <div class="modal-text">
         <p><strong>EMC Thailand, Bangkok, Thailand</strong></p>
-        <p>Sept 2006 – Oct 2007</p>
+        <p>Sep. 2006 – Oct. 2007</p>
         <p>As a Technical Consultant and Implementation Specialist for Backup and Recovery solutions at EMC, I provided technical consultancy and delivered information protection solutions to clients in the APJ region.</p>
-        <p><strong>Key Projects:</strong></p>
         <ul>
           <li>Implemented NetWorker at various organizations including PTT Thai Oil Public Co. Ltd, Ministry of External Affairs (Bangkok), DTAC, True Move, Siam Pharmaceuticals, and Mitsubishi Motors Ltd.</li>
           <li>Implemented DiskXtender for UNIX/Linux at BAAC.</li>
@@ -390,7 +349,7 @@
         </ul>
       </div>
       <div class="modal-logo">
-        <img src="images/emc-logo.png" alt="EMC Thailand">
+        <img src="images/emc-logo.png" alt="EMC Logo">
       </div>
     </div>
   </div>
@@ -402,14 +361,6 @@ function openModal(id) {
 }
 function closeModal(id) {
   document.getElementById(id).style.display = 'none';
-}
-window.onclick = function(event) {
-  const modals = document.querySelectorAll('.modal');
-  modals.forEach(modal => {
-    if (event.target == modal) {
-      modal.style.display = "none";
-    }
-  });
 }
 </script>
 
