--- a/experience.html
+++ b/experience.html
@@ -37,6 +37,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
     cursor: pointer;
     transition: transform 0.2s;
@@ -45,7 +46,9 @@
   .timeline-point img {
     width: 60px;
     height: 60px;
-    border-radius: 50%;
+    border-radius: 120%;
+    object-fit: contain;
+    padding: 5px;
     transition: transform 0.2s;
   }
   .timeline-year {
@@ -96,9 +99,12 @@
     border: 1px solid #888;
     width: 70%;
     max-width: 900px;
+    max-height: 80vh;
     border-radius: 10px;
     color: #fff;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   .modal-header {
     display: flex;
