--- a/index.html
+++ b/index.html
@@ -67,17 +67,28 @@
     margin: 20px 0;
   }
   /* Circle container for the logo */
-  .timeline-point {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #222; /* keep subtle dark background */
-    display: flex;
-    align-items: center;   /* vertical centering */
-    justify-content: center; /* horizontal centering */
-    overflow: hidden;
-    margin: 0 auto; /* center the whole circle on timeline */
-  }
+.timeline-point {
+  position: relative;          /* needed for absolute positioning of circle + img */
+  padding-top: 72px;          /* leave room for 60px circle + small gap */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+}
+ .timeline-point::before {
+  content: "";
+  position: absolute;
+  top: 8px;                   /* small top offset so circle sits nicely */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #222;           /* circle background */
+  border: 2px solid #00bcd4;  /* visible circle border */
+  z-index: 0;
+  box-sizing: border-box;
+}
 /* Logo inside the circle */
 .timeline-point img {
   max-width: 70%;
@@ -97,6 +108,11 @@
     margin-top: 3px;
     transition: font-size 0.2s ease, color 0.2s ease;
   }
+    .timeline-year,
+.timeline-title {
+  position: relative;         /* normal flow under the reserved padding */
+  z-index: 2;
+}
   .timeline-point:hover .timeline-year,
   .timeline-point:hover .timeline-title {
     font-size: 16px;
@@ -139,6 +155,11 @@
     overflow-y: auto;
     overflow-x: hidden;
   }
+    .modal-content {
+  max-height: calc(100vh - 140px); /* keeps some top/bottom space */
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; /* smooth scrolling on mobile */
+}
   .modal-header {
     display: flex;
     justify-content: space-between;
