--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
   .modal-header h2 {
     margin: 0;
     color: #00bcd4;
+    font-weight: 700;
   }
   .close {
     color: #aaa;
@@ -280,7 +281,7 @@
 <div id="vivanka" class="modal">
   <div class="modal-content">
     <div class="modal-header">
-      <h1>Founder & Principal Consultant</h1>
+      <h2>Founder & Principal Consultant</h2>
       <span class="close" onclick="closeModal('vivanka')">&times;</span>
     </div>
     <div class="modal-body">
