--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
     max-width: 120px;
     max-height: 120px;
   }
+.modal-body ul {
+    list-style-type: disc; /* or circle, square */
+    padding-left: 1.25rem; /* indent so bullets show */
+    margin: 0.5rem 0;
+}
+.modal-body li {
+    margin-bottom: 0.25rem; /* spacing between items */
+}
 </style>
 </head>
 <body class="bg-slate-50 text-slate-900 dark:bg-slate-900 dark:text-slate-100">
@@ -289,7 +297,7 @@
         <p><strong>Vivanka Inc., Toronto, Canada</strong></p>
         <p>Apr. 2024 – Present</p>
         <p>Provided consulting services to Canadian enterprises on modernizing backup and cyber recovery strategies. Delivered end-to-end architecture, migration, and implementation services while engaging with stakeholders to ensure business alignment.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Led a 6 month engagement to migrate legacy NetWorker environment to latest version, modernizing backup infrastructure & improving recovery SLAs.</li>
           <li>Designed and deployed PowerProtect Data Manager (PPDM) with Data Domain and cloud tier across primary and secondary sites, enabling cost optimized long-term retention.</li>
           <li>Executed multiple PPDM + Data Domain projects, positioning Dell solutions for hybrid-cloud adoption with Azure cloud tier integration.</li>
@@ -314,7 +322,7 @@
         <p><strong>Dell Technologies, Toronto, Ontario, Canada</strong></p>
         <p>Oct. 2018 – Apr. 2024</p>
         <p>As a Consultant Solutions Architect for Data Protection Systems (DPS) at Dell Technologies, I specialized in engaging with clients to understand their business challenges and craft customized data protection solutions. I provided deep technical expertise in Dell's backup and recovery products, including NetWorker, Data Domain, Avamar, PowerProtect Data Manager, and Cyber Recovery, with a focus on integrating enterprise hybrid cloud environments and ensuring compliance with security and governance frameworks.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Served as a trusted technical advisor, guiding clients through data protection strategies and cyber recovery implementations to enhance resilience against cyber threats.</li>
           <li>Led pre-sales engagements by demonstrating product capabilities, tailoring solutions to client needs, and advising on security best practices, improving customer adoption rates.</li>
           <li>Initiated the integration of Generative AI-based solutions into data protection strategies, enhancing automation, threat detection, and predictive analytics for improved security and operational efficiency.</li>
@@ -345,7 +353,7 @@
         <p><strong>Dell EMC Middle East, Dubai, United Arab Emirates</strong></p>
         <p>Jul. 2013 – Oct. 2018</p>
         <p>As a Senior Advisor Solutions Architect for Data Protection Systems (DPS) at Dell EMC in the GCC region, I closely collaborated with clients to deliver tailored data protection solutions. My expertise covered EMC’s backup and recovery products, such as NetWorker, Data Domain, Avamar, Data Protection Advisor, Cristie BMR solutions, IDPA, and integration with Enterprise Hybrid Cloud. I also integrated third-party solutions, such as Commvault, Veeam, and IBM Spectrum Protect, while driving AI-focused initiatives to enhance automation, predictive analytics, and threat detection in data protection strategies.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Delivered bespoke solutions for global accounts, optimizing data protection strategies and driving significant business value through tailored implementations.</li>
           <li>Initiated and led AI-focused training programs, promoting the integration of AI technologies into the design and implementation of data protection solutions, enhancing operational efficiency, security, and proactive risk management.</li>
           <li>Played a vital role in supporting sales efforts by leveraging technical expertise to strengthen client relationships and drive revenue growth.</li>
@@ -380,7 +388,7 @@
         <p><strong>EMC Middle East, Dubai, United Arab Emirates</strong></p>
         <p>Oct. 2010 – Jul. 2013</p>
         <p>As a Senior Implementation Delivery Specialist for Backup & Recovery Systems (BRS) at EMC, I provided implementation services for data protection solutions in the GCC region. My responsibilities included performing complex software implementations, managing delivery of services, and ensuring high customer satisfaction.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Delivered implementation services for backup and recovery solutions to customers in the GCC region, ensuring adherence to specifications and design documents.</li>
           <li>Managed implementation delivery of services to achieve high customer satisfaction.</li>
           <li>Collaborated with EMC colleagues worldwide to resolve technical issues encountered during implementations.</li>
@@ -405,7 +413,7 @@
         <p><strong>EMC Data Storage India Pvt. Ltd., New Delhi, India</strong></p>
         <p>Oct. 2007 - Oct. 2010</p>
         <p>As an Implementation Delivery Specialist for Backup & Recovery Systems (BRS) at EMC, I deployed backup and recovery solutions for customers in South Asia.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Provided delivery services for backup and recovery solutions to customers in the South Asia region.</li>
           <li>Implemented a combination of EMC products including NetWorker, Data Domain, Avamar, Data Protection Advisor, Homebase (BMR) solutions, EMC EmailXtender (SourceOne), and EMC DiskExtender.</li>
         </ul>
@@ -429,7 +437,7 @@
         <p><strong>EMC Thailand, Bangkok, Thailand</strong></p>
         <p>Sep. 2006 – Oct. 2007</p>
         <p>As a Technical Consultant and Implementation Specialist for Backup and Recovery solutions at EMC, I provided technical consultancy and delivered information protection solutions to clients in the APJ region.</p>
-        <ul class="list-disc pl-5 space-y-1 text-gray-800">
+        <ul>
           <li>Implemented NetWorker at various organizations including PTT Thai Oil Public Co. Ltd, Ministry of External Affairs (Bangkok), DTAC, True Move, Siam Pharmaceuticals, and Mitsubishi Motors Ltd.</li>
           <li>Implemented DiskXtender for UNIX/Linux at BAAC.</li>
           <li>Developed Java code for file permissions settings before archiving using DiskXtender for a customer in Malaysia.</li>
