--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
     <div class="mx-auto max-w-7xl px-4 py-3 flex items-center gap-4">
       <span class="font-extrabold tracking-tight">Kamal Thakor</span>
       <nav class="hidden md:flex gap-3 ml-4 text-sm">
-        <a href="#summary" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Professional Summary</a>
-        <a href="#competencies" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Core Competencies</a>
-        <a href="#experience" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Work Experience</a>
-        <a href="#education" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Educational Qualifications</a>
-        <a href="#certs" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Certifications/Learnings</a>
-        <a href="#achievements" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Key Achievements</a>
+        <a href="#summary" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Summary</a>
+        <a href="#experience" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Experience</a>
+        <a href="#competencies" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Competencies</a>
+        <a href="#education" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Education</a>
+        <a href="#certs" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Certifications</a>
+        <a href="#achievements" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Achievements</a>
         <a href="#fullcv" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Full CV</a>
         <a href="#contact" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Contact</a>
       </nav>
@@ -451,44 +451,77 @@
 </div>
   </section>
   <!-- Core Competencies -->
-  <section id="competencies" class="mx-auto max-w-7xl px-4 py-10">
-    <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Selected Projects</h2>
-    <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
-      <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-        <div class="flex items-center justify-between"><h4 class="font-semibold">Informatica MDM – Aviva Insurance</h4><span class="text-xs opacity-70">2024–2025</span></div>
-        <p class="mt-2 text-sm opacity-90">Reverse‑engineering architecture & alignment</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs">
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Java</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Oracle</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Informatica IDCM</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">REST APIs</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">UML</span>
-        </div>
-      </div>
-      <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-        <div class="flex items-center justify-between"><h4 class="font-semibold">Client Onboarding Experience System</h4><span class="text-xs opacity-70">2023–2024</span></div>
-        <p class="mt-2 text-sm opacity-90">Automation with Power Platform & DevOps</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs">
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Power Apps</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Power Automate</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Dataverse</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Azure DevOps</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">D365</span>
-        </div>
-      </div>
-      <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-        <div class="flex items-center justify-between"><h4 class="font-semibold">Invoice Request & Intake Tools</h4><span class="text-xs opacity-70">2019–2023</span></div>
-        <p class="mt-2 text-sm opacity-90">Standardization & RPA</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs">
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Access</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">SQL Server</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Blue Prism</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Power Automate</span>
-          <span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">SharePoint</span>
-        </div>
-      </div>
+<section id="competencies" class="mx-auto max-w-7xl px-4 py-10">
+  <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Core Competencies</h2>
+  <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-5">
+
+    <!-- 1 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Enterprise Architecture & Technology Strategy</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Target-state architecture, gap analysis, transformation roadmaps, and alignment of IT initiatives with business objectives.
+      </p>
     </div>
-  </section>
+
+    <!-- 2 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Digital & Cloud Transformation</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Hybrid and multi-cloud adoption (Azure, AWS, GCP) integrated with Dell Data Domain, PPDM, and modern backup/recovery solutions.
+      </p>
+    </div>
+
+    <!-- 3 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Data Protection & Cyber Resilience</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Dell (Avamar, NetWorker, Data Domain, PPDM, Cyber Recovery Vault), Commvault, Veeam, Rubrik, Cohesity; designing secure, compliant, and resilient architectures.
+      </p>
+    </div>
+
+    <!-- 4 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Cybersecurity & Compliance Leadership</h4>
+      <p class="mt-2 text-sm opacity-90">
+        CyberSense, Zero Trust frameworks, PCI, NIST, CIS; embedding risk reduction and regulatory alignment in enterprise IT strategies.
+      </p>
+    </div>
+
+    <!-- 5 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Executive Stakeholder Engagement</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Influencing CIOs, CTOs, and senior business leaders through strategy workshops, executive presentations, and steering sessions.
+      </p>
+    </div>
+
+    <!-- 6 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Program & Transformation Leadership</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Leading large-scale initiatives, architecture modernization, migrations, and hybrid-cloud implementations, ensuring measurable business outcomes.
+      </p>
+    </div>
+
+    <!-- 7 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Business Case Development & Value Realization</h4>
+      <p class="mt-2 text-sm opacity-90">
+        ROI/TCO modeling, cost-benefit analysis, risk mitigation, and articulating business impact for technology investments.
+      </p>
+    </div>
+
+    <!-- 8 -->
+    <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+      <h4 class="font-semibold">Consulting & Delivery Excellence</h4>
+      <p class="mt-2 text-sm opacity-90">
+        Architecture design, migrations, large-scale implementations, escalation management, and cross-functional collaboration to ensure enterprise success.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 
   <!-- Awards Carousel -->
   <section id="awards" class="mx-auto max-w-7xl px-4 py-10">
