--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
 
 
   <!-- Awards Carousel -->
-  <section id="awards" class="mx-auto max-w-7xl px-4 py-10">
-    <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Awards & Recognition</h2>
+  <section id="achievements" class="mx-auto max-w-7xl px-4 py-10">
+    <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Acheivements & Recognition</h2>
     <div class="mt-6 flex items-center gap-3">
       <button id="aw-prev" class="px-3 py-2 rounded-xl border border-slate-300/70 dark:border-slate-700/70">Prev</button>
       <a id="aw-card" href="#" target="_blank" rel="noreferrer" class="flex-1">
@@ -543,28 +543,40 @@
   <section id="certs" class="mx-auto max-w-7xl px-4 py-10">
     <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Certifications</h2>
     <div class="mt-6 grid sm:grid-cols-2 lg:grid-cols-3 gap-4">
-      <a href="https://learn.microsoft.com/api/credentials/share/en-us/MaulikSHAH-9347/6D705AEFE714257E?sharingId=254C77B0EEF6FDC4" target="_blank" rel="noreferrer" class="block">
+      <a href="https://credentials.databricks.com/673c0548-1ce1-4094-93ff-22254a2e4d6b" target="_blank" rel="noreferrer" class="block">
         <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-          <h4 class="font-medium leading-snug">PL‑900: Power Platform Fundamentals</h4>
-          <p class="mt-1 text-xs opacity-70 break-all">Microsoft Learn share link</p>
+          <h4 class="font-medium leading-snug">Academy Accreditation - Generative AI Fundamentals</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">Databricks Credentails</p>
         </div>
       </a>
-      <a href="https://learn.microsoft.com/api/credentials/share/en-us/MaulikSHAH-9347/402C1BCEF9011AE5?sharingId=254C77B0EEF6FDC4" target="_blank" rel="noreferrer" class="block">
+      <a href="" target="_blank" rel="noreferrer" class="block">
         <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-          <h4 class="font-medium leading-snug">Applied Skills (Power Automate / Power Apps / Dataverse)</h4>
-          <p class="mt-1 text-xs opacity-70 break-all">Microsoft Learn share link</p>
+          <h4 class="font-medium leading-snug">Azure Fundamentals</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">Great Learnings</p>
         </div>
       </a>
-      <a href="https://www.credly.com/badges/10a38790-5cfc-4864-bcd0-af46cdd326ad/public_url" target="_blank" rel="noreferrer" class="block">
+      <a href="" target="_blank" rel="noreferrer" class="block">
         <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-          <h4 class="font-medium leading-snug">AWS Partner Technical Accredited</h4>
-          <p class="mt-1 text-xs opacity-70 break-all">Credly link</p>
+          <h4 class="font-medium leading-snug">Artificial Intelligence Fundamentals</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">Great Learning Academy</p>
         </div>
       </a>
-      <a href="https://credentials.databricks.com/5bf63990-aecd-4998-bf57-52d98762e90f" target="_blank" rel="noreferrer" class="block">
+      <a href="" target="_blank" rel="noreferrer" class="block">
         <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
-          <h4 class="font-medium leading-snug">Databricks Lakehouse & Generative AI</h4>
-          <p class="mt-1 text-xs opacity-70 break-all">Databricks credentials</p>
+          <h4 class="font-medium leading-snug">AWS Cloud Bootcamp</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">Thinkcloudlys</p>
+        </div>
+      </a>
+      <a href="https://www.credly.com/badges/3545c1f2-0d15-4093-a2a1-c60be5c0f613/linked_in_profile" target="_blank" rel="noreferrer" class="block">
+        <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+          <h4 class="font-medium leading-snug">ISC2 Candidate</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">ISC2</p>
+        </div>
+      </a>
+      <a href="" target="_blank" rel="noreferrer" class="block">
+        <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-5">
+          <h4 class="font-medium leading-snug">EMC Proven Professional Certification (EMC)</h4>
+          <p class="mt-1 text-xs opacity-70 break-all">EMC</p>
         </div>
       </a>
     </div>
@@ -754,12 +766,11 @@
 
     // Awards Carousel
     const awards = [
-      { name: 'Shooting Star', year: '2023', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/experience/206979330/multiple-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos&treasuryMediaId=1734697030481' },
-      { name: 'Stalwart', year: '2022', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/experience/206979330/multiple-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos&treasuryMediaId=1734700265441' },
-      { name: 'Above & Beyond', year: '2020', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/experience/206979330/multiple-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos&treasuryMediaId=1738939367167' },
-      { name: 'Star & Cash (MVP)', year: '2019', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/experience/206979330/multiple-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos&treasuryMediaId=1740146449367' },
-      { name: 'Most Valuable', year: '2017–2018', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/experience/206979330/multiple-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos&treasuryMediaId=1734701260029' },
-      { name: 'Achiever of the Month', year: '2015', url: 'https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/overlay/1734696487939/single-media-viewer/?profileId=ACoAAAYbqGEB6eQiz7M5rR-BN2A4GftSqJyYqos' }
+      { name: 'Solution Architect of the Year Award - Gulf & Pakistan', year: '2014', url: '' },
+      { name: 'Computer Science Student of the Year', year: '1998', url: '' },
+      { name: 'Led backup & recovery transformation projects for Fortune 500 clients', year: '2023', url: '' },
+      { name: 'Automated backup & disaster recovery workflows, improving operational efficiency by 40%', year: '2024', url: '' },
+      { name: 'Conducted cyber resilience assessments and implement zero-trust security measures for large enterprises', year: '2023', url: '' },
     ];
     let awIdx = 0;
     const awPrev = document.getElementById('aw-prev');
